--- a/src/Weather.css
+++ b/src/Weather.css
@@ -28,9 +28,9 @@
   list-style: none;
 }
 
-.Weather img {
-  height: 64px;
+.Weather canvas {
   margin-right: 10px;
+  margin-top: 5px;
   display: inline-block;
 }
 
@@ -40,6 +40,7 @@
   font-size: 64px;
   line-height: 64px;
   font-weight: 400;
+  margin-left: 10px;
 }
 
 .Weather .unit {
