--- a/src/Weather.css
+++ b/src/Weather.css
@@ -3,13 +3,11 @@
   border: 1px solid #dadde1;
   color: rgb(135, 135, 135);
   padding: 16px;
-  margin: 30px auto;
   border-radius: 4px;
   max-width: 600px;
 }
 
 .Weather h1 {
-  color: #878787;
   font-size: 24px;
   font-weight: 100;
   line-height: 29px;
@@ -29,9 +27,7 @@
 }
 
 .Weather canvas {
-  margin-right: 10px;
-  margin-top: 5px;
-  display: inline-block;
+  margin-right: 10px auto;
 }
 
 .Weather .temperature {
@@ -49,6 +45,5 @@
   font-weight: 400;
   position: relative;
   line-height: 1;
-  top: -32px;
-  margin-left: 5px;
+  top: -34px;
 }
